--- a/style.css
+++ b/style.css
@@ -39,17 +39,23 @@ body{
     width:5em;
     height:5em;
     background-color:brown;
-}
-
-
-.mole_obj:active{
-    background-color: black;
+    transition: opacity 0.4s ease;
+    
 }
 
 .active{
-    display:inline-block;
+    opacity:1;
+   
+}
+
+.dead{
+    background-color:red;
+    pointer-events:none;
+    transition: opacity 0.2s ease-in 0.3s;
 }
 
 .deactive{
-    display:none;
+    opacity:0;
+    pointer-events: none;
+   
 }
