--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+
 body{
+    padding:0;
+    margin:0;
     text-align: center;
 }
 
 #Spawn_area{
     margin:auto;
+    
     width: 30em;
     height: 30em;
     display:flex;
@@ -36,10 +40,11 @@ body{
 }
 
 .mole_obj{
+    border-style:none;
     width:5em;
     height:5em;
     background-color:brown;
-    transition: opacity 0.4s ease;
+    transition: opacity 0.3s ease;
     
 }
 
@@ -58,4 +63,19 @@ body{
     opacity:0;
     pointer-events: none;
    
+}
+
+#start{
+    margin: 2em;
+}
+
+#wave_banner{
+    position:absolute;
+    height: 100px;
+    width: 100%;
+    top:40%;
+    background-color:rgba(233, 50, 50, 0.5);
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
